--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -2030,7 +2030,7 @@
         "important": {
             "title": "Important",
             "user_verification":
-                "CryptoBridge requires verification of the identity of United States citizens for use of the gateway beginning March 7, 2019. <a target=\"_blank\" href=\"https://crypto-bridge.org/2019/02/26/urgent-announcement-terms-of-service-identity-verification-requirements/\">Read more here.</a>"
+                "Please familiarize yourself with our Terms of Service for all users and identity verification for US users. The grace period will end March 07, 2019 0:00 UTC. <a target=\"_blank\" href=\"https://crypto-bridge.org/2019/02/26/urgent-announcement-terms-of-service-identity-verification-requirements/\">Read more here.</a>"
         },
         "general": {
             "check_url": "Please check that you are visiting %(url)s",
