--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -2069,7 +2069,10 @@
                 "You need to read and accept the Terms of Service",
             "account_kyc_action_required": "Start user verification",
             "account_kyc_action_required_label":
-                "You need to complete user verification to use CryptoBridge"
+                "You need to complete user verification to use CryptoBridge",
+            "account_kyc_action_pending": "Check your verification status",
+            "account_kyc_action_pending_label":
+                "Awaiting user verification by Fractal"
         },
         "header": {
             "imprint": "Imprint",
@@ -2117,9 +2120,11 @@
                 "I hereby renounce to my consumer right of revocation and acknowledge I can terminate the use of the service at anytime as described in §5.9 of CryptoBridge's Terms of Service",
             "are_you_us_citizen": "Are you a U.S. citizen?",
             "kyc_info":
-                "Thank you for accepting our Terms of Service. To continue using the CryptoBridge gateway, you must complete a user verification process. Accepting this requirement will redirect you to our partner, Fractal, and upon completion your access to the full features of the gateway will be restored.",
+                "To continue using the CryptoBridge gateway, you must complete a user verification process. Accepting this requirement will redirect you to our partner, Fractal, and upon completion your access to the full features of the gateway will be restored.",
             "kyc_info_grace":
-                "Thank you for accepting our Terms of Service. To continue using the CryptoBridge gateway, you must complete a user verification process. There will be a grace period allowing those who do not consent to the verification process to withdraw their funds which ends on %(deadlineDate)s. Accepting this requirement will redirect you to our partner, Fractal, and upon completion your access to the full features of the gateway will be restored."
+                "To continue using the CryptoBridge gateway, you must complete a user verification process. There will be a grace period allowing those who do not consent to the verification process to withdraw their funds which ends on %(deadlineDate)s. Accepting this requirement will redirect you to our partner, Fractal, and upon completion your access to the full features of the gateway will be restored.",
+            "kyc_info_pending":
+                "Our systems indicate you have begun the verification process. Trading, deposit and withdraw functionalities will remain disabled until your submission is approved by Fractal (around 24 hours of submitting it). Please contact Fractal for issues related to completion of your verification."
         },
         "dashboard": {
             "all_markets": "All Markets",
