--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1873,7 +1873,8 @@
             "limit_per_period": "Withdrawal limit per period",
             "period": "Specify period",
             "num_of_periods": "Number of periods",
-            "start_date": "Specify start date"
+            "start_date": "Specify start date",
+            "create_new_mandate": "Create new mandate"
         },
         "paper_wallet": {
             "description": "Create a PDF with your account's keys printed (plain text and barcode). If the wallet is unlocked, the private keys are added as well.",
