Update Settle Modal to Style Guide

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -665,10 +665,14 @@
             }
         },
         "settle": "Settlement",
+        "settle_delay": "This asset will settle in %(hours)s hours",
+        "settle_delay_globally_settled": "This asset will settle instantly",
+        "settle_better_marketprice": "Market price is in favour",
+        "settle_better_settleprice": "Settlement price is in favour",
         "settle_globally_settled": "Settle instantly",
         "settle_globally_settled_tooltip": "This asset is globally settled. You can settle it instantly for the global settlement price (see exchange header or asset details)",
         "settle_orders": "Settle orders",
-        "settlement_hint": "You are attempting to settle {long}. Here is a price break down of {market_link}:",
+        "settlement_hint": "You are attempting to settle {long}. Current price of {market_link}",
         "short": "Short",
         "show_all_orders": "Show all %(rowcount)s orders",
         "show_all_trades": "Show all %(rowcount)s trades",
@@ -688,7 +692,7 @@
         "vol_short": "Vol",
         "volume": "Volume",
         "volume_24": "24hr Volume",
-        "worth_less_settlement_warning": "Warning! You can get a better price by selling to {market_link}.",
+        "worth_less_settlement_warning": "The current market price of {market_link} is higher than settle price",
         "your_price": "Your Call Price",
         "zoom": "Zoom",
         "zoom_all": "All"
