[FEATURE] address creation for authorized users only

--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -2075,5 +2075,118 @@
             "finalNumber": "Фактическая сумма:%(final_number)s",
             "winAmount": "Минимальная сумма: %(min_amount)s %(asset)s"
         }
+    },
+    "cryptobridge": {
+        "important": {
+            "title": "Важно",
+            "user_verification":
+                "Пожалуйста ознакомьтесь с условиями Пользовательского Соглашения (для всех) и системой верификации (для граждан США).<a target=\"_blank\" href=\"https://crypto-bridge.org/2019/02/26/urgent-announcement-terms-of-service-identity-verification-requirements/\">Узнать больше</a>"
+        },
+        "general": {
+            "check_url":
+                "Пожалуйста удостоверьтесь, что Вы просматриваете %(url)s",
+            "important": "Важно",
+            "news": "Новости"
+        },
+        "gateway": {
+            "deposit_fee": "Комиссия за депозит",
+            "deposit_payment_id_tag_required":
+                "Вы ДОЛЖНЫ использовать это дополнительное поле",
+            "deposit_payment_id_tag":
+                "Дополнительное поле (может не потребоваться)",
+            "deposit_payment_id_tag_invalid": "Дополнительное поле не верно",
+            "deposit_payment_id_hash":
+                "Идентификатор платежка (может не потребоваться)",
+            "deposit_payment_id_hash_invalid": "Идентификатор платежа не верен",
+            "deposit_tag_acknowledgement_alert":
+                "ВНИМАНИЕ: Невыполнение правильной процедуры депозита %(asset)s может привести к потере средств.",
+            "deposit_tag_acknowledgement_info":
+                "<p>Ввод %(asset)s на CryptoBridge требует указания <strong>и адреса и дополнительного поля</strong>. Для совершения депозита %(asset)s используйте:</p><ul><li>адрес</li><li>дополнительное поле</li></ul><p>НЕ отправляйте %(asset)s на CryptoBridge если Вы не знаете, как указать дополнительное поле. Если Вы не указали это дополнительное поле - депозит утерян безвозвратно.</p>",
+            "deposit_tag_acknowledgement_confirm": "Я понимаю. Продолжаем.",
+            "copy_address_tag": "Скопировать Дополнительное Поле",
+            "required_confirmations": "Требуется подтверждений",
+            "support_block": "Для связи со службой поддержки CryptoBridge:",
+            "deposit_or_withdrawal": "Ввод и вывод монет",
+            "deposit_intro":
+                "Если Вы хотите ввести или вывести средства из других блокчейнов используйте форму ниже.",
+            "deposit_to_fee_warning":
+                "ВНИМАНИЕ: Ввод %(asset)s чаще чем раз в %(fee_time_frame)s минут приведет к взыманию %(fee_percentage)s% комиссии (минимум %(fee_minimum)s %(asset)s). Комиссия на депозит %(fee_percentage_low_amounts)s% взымается если размер депозита меньше 1 %(asset)s.",
+            "deposit_minimum": "Минимальный депозит",
+            "deposit_login":
+                "Ваш кошелёк должен быть разблокирован для совершения депозита",
+            "receive_funds": "Получение средств",
+            "receive_funds_intro":
+                "Для получения средств от другого пользователя CryptoBridge, просто сообщите Ваш аккаунт: ",
+            "account_tos_action_required":
+                "Открыть Пользовательское Соглашение",
+            "account_tos_action_required_label":
+                "Требуется принять условия Пользовательского Соглашения",
+            "account_kyc_action_required": "Начать верификаию пользователя",
+            "account_kyc_action_required_label":
+                "Граждане США должны пройти верификацию чтобы использовать CryptoBridge",
+            "account_kyc_action_pending": "Проверить статус верификаци",
+            "account_kyc_action_pending_label":
+                "Ожидание верификации пользователя от Fractal"
+        },
+        "header": {
+            "imprint": "Официальные данные",
+            "terms": "Условия использования"
+        },
+        "footer": {
+            "title": "CryptoBridge"
+        },
+        "account": {
+            "id": "Идентификатор вклада BCO",
+            "title":
+                "Используйте вклад BridgeCoin (BCO) для получения дохода от работы шлюза CryptoBridge",
+            "intro_text_title": "Добро пожаловать на CryptoBridge",
+            "staking_amount": "Размер вклада",
+            "remaining": "Осталось времени",
+            "staking_text1":
+                "Каждый, разместивший вклад BCO имеет право на получение доли от %(percent)s прибыли <b>шлюза CryptoBridge</b>. Размещение вклада заблокириует средства на срок, указанный ниже. В течение этого срока Вы автоматически получать распределённую прибыль. Выплаты происходят раз в две недели.",
+            "staking_text2":
+                "Увеличение срока вклада приводит к увеличению доли выплат. По окончанию срока вклада, Вы можете вернуть Ваши средства с помощью кнопки <b>'Востребовать сейчас'</b>. Комиссия блокчейна на создание вклада в данный момент составляет <b>%(fee)s BCO</b>. Комиссия блокчейна на востребование вклада BCO в данный момент составляет <b>%(reclaimFee)s BCO.</b>",
+            "staking_text3":
+                "Создать вклад BCO Вы можете только из тех монет, которые введены через <b>шлюз CryptoBridge</b>. Узнать больше о преимуществах <b>шлюза CryptoBridge</b> и его системе распределения прибыли Вы можете тут: <a target=\"_new\" href=\"https://crypto-bridge.org\">crypto-bridge.org</a>. Больше информации о том, как происходят выплаты, работает система бонусов доступно тут: <a target=\"_new\" href=\"https://crypto-bridge.org#faq\">ЧАВО</a>. ",
+            "status": "Статус",
+            "staking": "Вклад BridgeCoin",
+            "days": "%(days)s дней",
+            "available": "Доступно для получения",
+            "month_1": "1 месяц (%(bonus)s бонус)",
+            "month_3": "3 месяца (%(bonus)s бонус)",
+            "month_6": "6 месяцев (%(bonus)s бонус)",
+            "month_12": "12 месяцев (%(bonus)s бонус)",
+            "month_1_plural": "1 месяц",
+            "month_3_plural": "3 месяца",
+            "month_6_plural": "6 месяцев",
+            "month_12_plural": "12 месяцев",
+            "amount_bco": "Количество BCO для вклада",
+            "stake_bco": "Создание нового вклада BCO",
+            "length": "Срок вклада",
+            "understand":
+                "Я соглашаюсь разместить вклад размером %(amount)s BCO, я полностью понимаю, что они будут заблокированы на %(month)s и я не смогу их вернуть до окончания срока вклада. Я соглашаюсь получать долю прибыли CryptoBridge в соответствии с размером моего вклада.",
+            "no_balances": "У Вас нет открытых вкладов BridgeCoin.",
+            "bco_available": "Доступно: ",
+            "bco_not_available": "Нет доступных BCO ",
+            "terms_and_conditions": "Пользовательское Соглашение CryptoBridge",
+            "terms_and_conditions_accept":
+                "Я прочел и соласен с %(cryptobridge_terms_and_conditions)s",
+            "terms_and_conditions_accept_disclaimer":
+                "Настоящим я отказываюсь от права потребителя на отзыв и подтверждаю, что я могу отказаться от услуг в любое время, как описано в §5.9 Пользовательского Соглашения CryptoBridge",
+            "are_you_us_citizen": "Вы гражданин %(flagImg)s США?",
+            "kyc_info":
+                "Для продолжения использования шлюза CryptoBridge, граждане США сначала должны подтвердить их личность. При согласии на это требование, мы перенаправим Вас к нашему партнеру - Fractal. По завершению полный функционал Вашего аккаунта будет восстановлен.",
+            "kyc_info_grace":
+                "Для продолжения использования шлюза CryptoBridge, граждане США сначала должны подтвердить их личность. Не согласные с процессом верификации смогут вывести свои средства в период до %(deadlineDate)s.  При согласии на это требование, мы перенаправим Вас к нашему партнеру - Fractal. По завершению полный функционал Вашего аккаунта будет восстановлен.",
+            "kyc_info_pending":
+                "По нашим данным Вы начали процесс верификации. Торговля, ввод и вывод отключены до заверешния этого процесса. Утверждение Ваших данных должно быть выполнено Fractal за 24 часа с момента их предоставления. Пожалуйста свяжитесь с Fractal по вопросам состояния верификации."
+        },
+        "dashboard": {
+            "all_markets": "Все рынки",
+            "proposal_warning":
+                "НЕ СОГЛАШАЙТЕСЬ на предложения от неизвестных аккаунтов. Ваш аккаунт может быть украден если Вы примите мошенническое предложение.",
+            "proposal_info":
+                "Если сомневаетесь, ничего не делайте и спросите совета в Discord %(discordLink)s"
+        }
     }
 }
